Replace Java 11 features with equivalent Java 8 ones